# Local-MC-Server-Manager

./: .gitignore  MC.drawio  mc_server_manager.sh  toDO.txt
conf/: data
jar_grabber/: Cargo.toml
jar_grabber/src/: jar_grabber.rs
